--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -202,7 +202,7 @@
                         <segue destination="Ctb-GV-Uzk" kind="show" identifier="Contact" id="Vxj-Ry-SD1"/>
                         <segue destination="HN8-PE-Zbx" kind="show" identifier="Tips" id="6WD-hW-5IC"/>
                         <segue destination="EhU-hB-EbK" kind="show" identifier="Alarm" id="x4A-VO-Hn6"/>
-                        <segue destination="pVY-57-a4J" kind="show" identifier="Setting" id="SUo-UO-YUi"/>
+                        <segue destination="pVY-57-a4J" kind="show" identifier="SettingOld" id="SUo-UO-YUi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DIq-mm-bR6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -510,10 +510,10 @@ Mail https://www.contact.city.kawasaki.jp/cgi-bin/jp/mail/input.cgi</string>
             </objects>
             <point key="canvasLocation" x="1227" y="3037"/>
         </scene>
-        <!--Setting View Controller-->
+        <!--Setting View Controller Old-->
         <scene sceneID="QdV-8o-74X">
             <objects>
-                <viewController storyboardIdentifier="Setting" id="pVY-57-a4J" customClass="SettingViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Setting" id="pVY-57-a4J" customClass="SettingViewControllerOld" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="D54-k8-cOX"/>
                         <viewControllerLayoutGuide type="bottom" id="nXS-Xv-Wc4"/>
