--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -561,17 +561,23 @@ Mail https://www.contact.city.kawasaki.jp/cgi-bin/jp/mail/input.cgi</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BN0-5I-web">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="BN0-5I-web" firstAttribute="top" secondItem="r0w-A8-o8v" secondAttribute="topMargin" id="0Sc-Ry-Hn6"/>
                             <constraint firstItem="i2m-em-8ox" firstAttribute="top" secondItem="BN0-5I-web" secondAttribute="bottom" id="ChW-UO-fhJ"/>
                             <constraint firstItem="BN0-5I-web" firstAttribute="top" secondItem="DEV-iP-MP9" secondAttribute="bottom" id="VuG-Td-beF"/>
                             <constraint firstItem="BN0-5I-web" firstAttribute="leading" secondItem="r0w-A8-o8v" secondAttribute="leading" id="oqV-lx-ZYG"/>
                             <constraint firstAttribute="trailing" secondItem="BN0-5I-web" secondAttribute="trailing" id="twq-in-Uq8"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="VuG-Td-beF"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="settingTableView" destination="BN0-5I-web" id="gLC-od-fUa"/>
